fixed my-intro alignment

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   
   margin: 0;
   padding: 0;
-  font-family: Mukta;
+  font-family: 'Mukta';
 }
 body {
   margin: 0;
