--- a/src/components/aboutme.css
+++ b/src/components/aboutme.css
@@ -56,3 +56,14 @@
 .heading3 {
     margin-bottom: 0;
 }
+
+.my-intro {
+    display: flex;
+    padding: 0 30px;
+}
+.my-intro, p {
+    font-size: 15px;
+    font-family: 'Nunito Sans';
+    font-weight: 400;
+    color: #7a7a7a;
+}
